CharBubble By Arturo

--- a/sandarinmuebles/package.json
+++ b/sandarinmuebles/package.json
@@ -9,8 +9,11 @@
     "antd": "^5.10.0",
     "firebase": "^10.5.0",
     "har-validator": "^5.1.5",
+    "install": "^0.13.0",
+    "npm": "^10.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-player": "^2.13.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.16.0",
